<resources>
    <string name="app_name">Speech To Text</string>
    <string name="press_the_mic_to_record_voice">Press the mic to record voice!</string>
    <string name="speech_to_text">Speech To Text</string>
    <string name="text_enter_here_will_be_spoken">Text enter here will be spoken</string>
    <string name="text_to_speech">Text To Speech</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="settings">Settings</string>
    <string name="speech_to_tex">Speech to text</string>
    <string name="text_to_speec">Text to speech</string>
    <string name="setting">Setting</string>

</resources>